[gd_scene load_steps=21 format=3 uid="uid://bwsxcvg8tgsku"]

[ext_resource type="Texture2D" uid="uid://d2064pj05mkxy" path="res://scenes/game_object/enemy/bunny/bunny.png" id="1_5rorc"]
[ext_resource type="Script" path="res://scenes/game_object/enemy/bunny/bunny.gd" id="1_6uvuu"]
[ext_resource type="PackedScene" uid="uid://jfbffly5rjbc" path="res://scenes/components/health_component.tscn" id="2_3otdp"]
[ext_resource type="PackedScene" uid="uid://gbwjb2qhqvk0" path="res://scenes/manager/statuses/status_manager.tscn" id="2_jwdia"]
[ext_resource type="PackedScene" uid="uid://cdmwpfegixcco" path="res://scenes/components/orange_drop_component.tscn" id="3_u7d0e"]
[ext_resource type="PackedScene" uid="uid://0fecexi8j7gb" path="res://scenes/game_object/orange/orange.tscn" id="4_jij05"]
[ext_resource type="PackedScene" uid="uid://cwatwkjukjlvd" path="res://scenes/components/hurtbox_component.tscn" id="5_q6qwx"]
[ext_resource type="PackedScene" uid="uid://cqlm0b75mtg4k" path="res://scenes/components/blood_particles_spawner_component.tscn" id="6_kh6v0"]
[ext_resource type="PackedScene" uid="uid://ceo6q5oos0dqn" path="res://scenes/components/velocity_component.tscn" id="6_mfqyy"]
[ext_resource type="PackedScene" uid="uid://ckcj3wwxivfbr" path="res://scenes/components/death_component.tscn" id="7_ycsh0"]
[ext_resource type="PackedScene" uid="uid://cryx377fes7t2" path="res://scenes/components/hitbox_component.tscn" id="8_5shgc"]
[ext_resource type="Texture2D" uid="uid://dw6tqbe2ry1kk" path="res://scenes/game_object/enemy/bunny/soul.png" id="8_ifdj7"]
[ext_resource type="PackedScene" uid="uid://doqby582yfyo" path="res://scenes/components/ground_shadow/ground_shadow_component.tscn" id="9_dgoci"]

[sub_resource type="Animation" id="Animation_ehbuc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ppcw2"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_xkfx1"]
resource_name = "jump"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"jump"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02i8m"]
_data = {
"RESET": SubResource("Animation_ehbuc"),
"die": SubResource("Animation_ppcw2"),
"jump": SubResource("Animation_xkfx1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tm7nw"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dktj0"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f6kmy"]
radius = 4.39996

[node name="Bunny" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 5
motion_mode = 1
script = ExtResource("1_6uvuu")

[node name="StatusManager" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_jwdia")]
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_3otdp")]
max_health = 4.0

[node name="OrangeDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_u7d0e")]
orange_scene = ExtResource("4_jij05")
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("character_body") instance=ExtResource("6_mfqyy")]
character_body = NodePath("..")
max_speed = 180.0
acceleration = 180.0

[node name="BloodParticlesSpawnerComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_kh6v0")]
position = Vector2(0, -4)
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_ycsh0")]
soul_texture = ExtResource("8_ifdj7")
health_component = NodePath("../HealthComponent")

[node name="ActionsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_02i8m")
}

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component", "status_manager") instance=ExtResource("5_q6qwx")]
collision_layer = 64
collision_mask = 8
health_component = NodePath("../HealthComponent")
status_manager = NodePath("../StatusManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_tm7nw")

[node name="HitboxComponent" parent="." instance=ExtResource("8_5shgc")]
collision_layer = 16
damage = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_dktj0")
debug_color = Color(0.7, 0, 0, 0.42)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_5rorc")
offset = Vector2(0, -8)
hframes = 6

[node name="GroundShadow" parent="Visuals" instance=ExtResource("9_dgoci")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_f6kmy")
